<resources>
    <string name="app_name">Abibas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EmailHint">Nicky@gmail.com</string>
    <string name="HintPass">ABC123</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember Me</string>
    <string name="abibaslogo">AbibasLogo</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="next_step">Next Step</string>
    <string name="your_password">Your Password</string>
    <string name="your_name">Your Name</string>
    <string name="you_role">You Role</string>
    <string name="create_user">Create User</string>
    <string name="hintName">Nicky Tan Jit Hwa</string>
    <string name="addimg">addImg</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_new_password">Your new password</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="staffimg">StaffImg</string>
    <string name="delete_all">Delete All</string>
    <string name="reset">Reset</string>
    <string name="updatestaffimg">updateStaffImg</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="product">Product</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="hint_phone">0123456789</string>
    <string name="submit">Submit</string>
    <string name="geopoint">3.1466, 101.6958</string>
    <string name="change_password">Change Password</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="manage_staff">Manage Staff</string>
    <string name="accountimg">accountImg</string>
    <string name="set_image">Set Image</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="imgchgprofilepic">imgChgProfilePic</string>
    <string name="update_supplier">Update Supplier</string>
    <string name="productimg">productImg</string>
    <string name="delete">Delete</string>
    <string name="sports_shoes">Sports Shoes</string>
    <string name="product_name">Product Name</string>
    <string name="quantity_threshold">Quantity threshold</string>
    <string name="location">Location</string>
    <string name="supplier">Supplier</string>
    <string name="button">Button</string>
    <string name="addproductimage">addProductImage</string>
    <string name="call">Call</string>
    <string name="dial">Dial</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_hint">Sneakers</string>
    <string name="imgupdateproduct">imgUpdateProduct</string>
    <string name="close">close</string>
    <string name="imgdetailproduct">imgDetailProduct</string>
    <string name="imgproductqrcode">imgProductQRCode</string>
    <string name="update_category">Update Category</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="outlet_hint">Mid Valley</string>
    <string name="add_outlet">Add Outlet</string>
    <string name="edit_outlet">Edit Outlet</string>
    <string name="manual">Manual</string>
    <string name="stock_in">Stock In</string>
    <string name="scan_qr">Scan QR</string>
    <string name="add_delivery">Add Delivery</string>
    <string name="delivery">Delivery</string>
    <string name="add_delivery_item">Add Delivery Item</string>
    <string name="outlet">Outlet</string>
    <string name="quantity">Quantity</string>
    <string name="product_id">Product ID</string>
    <string name="delivery_id">Delivery ID</string>
    <string name="delivery_item_quantity">delivery item quantity</string>
    <string name="delivery_item_photo">Delivery item photo</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="create_delivery">Create Delivery</string>
    <string name="deliverylisting">DeliveryListing</string>
    <string name="outlet_map">Outlet map</string>
    <string name="outlet_pin">Outlet PIN</string>
    <string name="confirm">Confirm</string>
    <string name="outlet_name">Outlet name</string>
    <string name="generate_pin">Generate PIN</string>
    <string name="pin">PIN :</string>
    <string name="add">Add</string>
    <string name="product_photo">Product photo</string>
    <string name="product_quantity">Product quantity</string>
    <string name="textview">TextView</string>
    <string name="update">Update</string>
    <string name="max_capacity">Max Capacity</string>
    <string name="details">Details</string>
    <string name="category">Category</string>
    <string name="a6">A6</string>
    <string name="a5">A5</string>
    <string name="a3">A3</string>
    <string name="a2">A2</string>
    <string name="a4">A4</string>
    <string name="a1">A1</string>
    <string name="location_editing">Location Editing</string>
    <string name="create_location">Create Location</string>
    <string name="location_listing">Location Listing</string>
    <string name="deliver">Deliver</string>
    <string name="located_here">Located here</string>
    <string name="outlet_location">Outlet Location</string>
    <string name="outlet_photo">Outlet photo</string>
    <string name="stock_in_summary">Stock In Summary</string>
    <string name="stock_out_summary">Stock Out Summary</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="all">All</string>
    <string name="summary">Summary</string>
    <string name="stock_out">Stock out</string>
    <string name="stock_in_quantity">stock in quantity</string>
    <string name="search">search</string>
    <string name="report">Report</string>
    <string name="category_maintenance">Category Maintenance</string>
    <string name="location_maintenance">Location Maintenance</string>
    <string name="delivery_maintenance">Delivery Maintenance</string>
    <string name="stock_maintenance">Stock Maintenance</string>
    <string-array name="userRole">
        <item>Manager</item>
        <item>Staff</item>
    </string-array>
</resources>