<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/product"
        android:icon="@drawable/ic_product_foreground"
        android:title="@string/product" />
    <item
        android:id="@+id/supplier"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/supplier" />
    <item
        android:id="@+id/outlet"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/outlet" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_foreground"
        android:title="@string/home" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account_foreground"
        android:title="@string/account" />

</menu>