<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SupplierAddFragment">

    <View
        android:id="@+id/view14"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:paddingStart="8dp"
        app:icon="@drawable/ic_baseline_add_location_24"
        app:layout_constraintBottom_toBottomOf="@+id/edtSupLoc"
        app:layout_constraintStart_toEndOf="@+id/edtSupLoc"
        app:layout_constraintTop_toTopOf="@+id/edtSupLoc"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="45dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="45dp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="270dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/edtSupLoc" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_supplier"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/questrial"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/view14" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/questrial"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/questrial"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/questrial"
        android:text="@string/e_mail"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/edtSupEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:hint="@string/EmailHint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/questrial"
        android:text="@string/reset"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnReset"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/btnReset" />

    <EditText
        android:id="@+id/edtSupName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:hint="@string/hintName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtSupPhone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:hint="@string/hint_phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtSupLoc"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:hint="@string/geopoint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.461"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>