<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StockOutSummaryFragment" >

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/stock_out_summary"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStockOutSummary"
        android:layout_width="369dp"
        android:layout_height="443dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStockOutSummaryDaily"
        tools:listitem="@layout/stockoutsummary_rv" />

    <TextView
        android:id="@+id/lblStockOutSummaryCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvStockOutSummary"
        tools:text="100 Record(s)" />

    <Button
        android:id="@+id/btnCloseStouckOutSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="@+id/lblStockOutSummaryCount"
        app:layout_constraintStart_toEndOf="@+id/lblStockOutSummaryCount"
        app:layout_constraintTop_toTopOf="@+id/lblStockOutSummaryCount"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/btnStockOutSummaryMonthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/monthly"
        app:layout_constraintBottom_toBottomOf="@+id/btnStockOutSummaryWeekly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStockOutSummaryWeekly"
        app:layout_constraintTop_toTopOf="@+id/btnStockOutSummaryWeekly" />

    <Button
        android:id="@+id/btnStockOutSummaryWeekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/weekly"
        app:layout_constraintBottom_toBottomOf="@+id/btnStockOutSummaryDaily"
        app:layout_constraintStart_toEndOf="@+id/btnStockOutSummaryDaily"
        app:layout_constraintTop_toTopOf="@+id/btnStockOutSummaryDaily" />

    <Button
        android:id="@+id/btnStockOutSummaryDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/daily"
        app:layout_constraintBottom_toBottomOf="@+id/btnStockOutSummaryAll"
        app:layout_constraintStart_toEndOf="@+id/btnStockOutSummaryAll"
        app:layout_constraintTop_toTopOf="@+id/btnStockOutSummaryAll"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnStockOutSummaryAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

</androidx.constraintlayout.widget.ConstraintLayout>