<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StockInSelectMethodFragment">

    <Button
        android:id="@+id/btnStockInChoiceScanQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:text="@string/scan_qr"
        app:icon="@drawable/ic_baseline_qr_code_scanner_24"
        app:layout_constraintEnd_toStartOf="@+id/guideline47"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <Button
        android:id="@+id/btnStockInChoiceManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/manual"
        app:icon="@drawable/ic_baseline_keyboard_24"
        app:layout_constraintBottom_toBottomOf="@+id/btnStockInChoiceScanQR"
        app:layout_constraintStart_toStartOf="@+id/guideline47"
        app:layout_constraintTop_toTopOf="@+id/btnStockInChoiceScanQR"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/stock_in"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <Button
        android:id="@+id/btnStockInChoiceSelectClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStockInChoiceScanQR" />

</androidx.constraintlayout.widget.ConstraintLayout>